# motiflets

./: .gitignore  AGENTS.md  README.md  TODO_experiments.txt  pyproject.toml  setup.py
apps/: streamlit_app.py
competitors/: latentmotifs.py  latentmotifs_numba.py
csvs/: cardinality.xlsx  scalability_n_runtimes_fNIRS.xlsx
motiflets/: __init__.py  _cli.py  backends.py  competitors.py  distances.py  knn_exact_backend.py  knn_pyattimo_backend.py  knn_scampi_backend.py  knn_vector_backend.py  maxheap.py  motiflets.py  plotting.py  pyattimo_backend.py  vector_backend.py
notebooks/: attimo-ecg.ipynb  attimo.ipynb  attimo_synthetic.ipynb  eval_matlab.ipynb  eval_scalability.ipynb  eval_scalability_old.ipynb  latent_motifs_memory.ipynb  pyattimo_competitors-subsampling.ipynb  pyattimo_competitors.ipynb  pyattimo_maxmemory.ipynb  pyattimo_versions.ipynb  use_case_multivariate.ipynb  use_cases.ipynb  use_cases_fnirs.ipynb  use_cases_motif_sets_ecg.ipynb  use_cases_motif_sets_muscle_activation.ipynb  use_cases_motif_sets_physiodata-spindles.ipynb  use_cases_motif_sets_physiodata_distance_measures.ipynb  use_cases_motif_sets_physiodata_k_Komplex.ipynb  use_cases_motif_sets_synthetic.ipynb  use_cases_motif_sets_vanilla_ice.ipynb  use_cases_motif_sets_winding.ipynb  use_cases_paper-Copy1.ipynb  use_cases_paper.ipynb  vldb_anytime.ipynb  vldb_competitors-subsampling.ipynb  vldb_competitors.ipynb  vldb_har_pamap.ipynb  vldb_use_cases.ipynb
tests/: __init__.py  _datasets.py  convert_attimo.py  convert_latentmotifs.py  convert_momp.py  convert_momp_2.py  convert_pyattimo.py  extract_momp_data.py  multivariate_audio_test.py  multivariate_birdsongs_test.py  multivariate_penguins_test.py  multivariate_vanilla_ice_test.py  multivariate_video_test.py  observe.csv  plot_momp_results.py  run_arrhythmia.py  run_astro.py  run_dishwasher.py  run_eeg_physiodata.py  run_gap.py  (+35 more)
(+1170 files in other folders)
