[project]
name = "motiflets"

version = "0.6.4"

description = "Motiflets - Simple and Accurate Detection of Motifs in Time Series"
readme = "README.md"
authors = [
    {name = "patrickzib", email = "patrick.schaefer@hu-berlin.de"}
]
keywords = [
    "machine-learning",
    "time-series",    
    "motif-discovery",
    "motif-sets",
    "motif-pairs",    
    "unsupervised",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "joblib>=1.1.0",
    "numba>=0.55.1",
    "numpy>=1.21.0",
    "pandas>=1.1.0",
    "scikit-learn>=0.24.0",
    "scipy<2.0.0",
    "seaborn>=0.11.2",
    "tqdm>=4.63.0",
    "matplotlib>=3.5.1",
    "tsdownsample>=0.1.3"
]

[project.urls]
repository = "https://github.com/patrickzib/motiflets"
#documentation = ""
#download = ""

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
